--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,11 +11,6 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v2
-    - name: Get short commit id
-      id: get_commit_id
-      run: echo "::set-output name=shorthash::$(git rev-parse --short HEAD)"
-    - name: Echo image tag
-      run: echo "${{ steps.get_commit_id.outputs.shorthash }}"
     - name: Login to Docker hub
       uses: docker/login-action@v1
       with:
@@ -26,4 +21,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: chukmunnlee/randnum:${{ steps.get_commit_id.outputs.shorthash }}
+        tags: chukmunnlee/randnum:${{ github.ref_name }}
