--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,9 +16,33 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Get short hash
+      id: get_commit_id
+      run: echo "::set-output name=shorthash::$(git rev-parse --short HEAD)"
     - name: Build image and push to Docker hub
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
         tags: chukmunnlee/randnum:${{ github.ref_name }}
+        #tags: chukmunnlee/randnum:${{ steps.get_commit_id.outputs.shorthash }}
+    - name: Push notification to slack
+      uses: slackapi/slack-github-action@v1.18.0
+      with:
+        payload: |
+          {
+            "text": "Pushed build to Dockerhub: chukmunnlee/randnum:${{ github.ref_name }}",
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "Name: Fred Flintstone\nMatriculation: abc123\nEmail: fred@gmail.com\nRepo: https://github.com/${{ github.repository }}\nImage name: fred/randnum:${{ github.ref_name }}"
+                }
+              }
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
