--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Echo message  
-      run: echo ">>> commit: ${{ (github.event.head_commit.message }}"
+      run: echo ">>> commit: ${{ github.event.head_commit.message }}"
     - name: Checkout source
       uses: actions/checkout@v2
     - name: Login to Docker hub
