--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ jobs:
       IMAGE_NAME: chukmunnlee/randnum:${{ github.ref_name }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-    if: ! contains(github.event.head_commit.message, "#NORUN#")
+    if: ! contains(github.event.head_commit.message, '#NORUN#')
     runs-on: ubuntu-latest
     steps:
     - name: Echo message  
