--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,7 @@ jobs:
       IMAGE_NAME: chukmunnlee/randnum:${{ github.ref_name }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      REPO_URL: ${{ github.repositoryUrl }}
     if: ${{ ! contains(github.event.head_commit.message, '#NORUN#') }}
     runs-on: ubuntu-latest
     steps:
@@ -44,7 +45,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "Name: Fred Flintstone\nMatriculation: abc123\nEmail: fred@gmail.com\nRepo: https://github.com/${{ github.repository }}\nImage name: ${{ env.IMAGE_NAME }}\nImage url: https://hub.docker.com/repository/docker/chukmunnlee/randnum"
+                  "text": "Name: Fred Flintstone\nMatriculation: abc123\nEmail: fred@gmail.com\nRepo: ${{ env.REPO_URL }}\nImage name: ${{ env.IMAGE_NAME }}\nImage url: https://hub.docker.com/repository/docker/chukmunnlee/randnum"
                 }
               }
             ]
